@@ -7,8 +7,6 @@ more tests:
 performance:
 - generate deltas rather than fulltexts when creating file id maps for the cache
 - fix copyfrom in replay and replay_range
-- needs_fetching() in RevisionFinder needs to work on sets of revisions
-  rather than indivual revisions
 - faster function for finding all *existing* tags for a project
 - faster function for finding all *existing* branches
 - automatically disable cache in some situations, allow partial cache?
