@@ -34,6 +34,7 @@ from bzrlib.plugins.svn.mapping import SVN_PROP_BZR_REVISION_ID
 from bzrlib.plugins.svn.tests import SubversionTestCase
 
 class WorkingSubversionBranch(SubversionTestCase):
+
     def test_last_rev_rev_hist(self):
         repos_url = self.make_repository("a")
         branch = Branch.open(repos_url)
